--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -11,11 +11,6 @@ html,body{
 .navbar-brand{
   font-size: x-large;
 }
-.table {
-  margin-bottom: 0.5px !important;
-  border-color: grey 0.5px !important;
-  font-size: 15px !important;
-}
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
   padding:3px 3px 3px 5px;
 }
@@ -44,6 +39,10 @@ html,body{
 }
 .main-side .table {
   background-color: transparent;
+  margin-bottom: 0;
+  border-color: grey 0.5px !important;
+  font-size: 15px !important;
+  line-height: 0;
 }
 #doc-background {
   opacity: 0.7;
