--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -4,10 +4,27 @@
 }
 
 html,body{
-  padding: 0;
-  margin: 0;
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
   font-family: Arial, Arial1;
 }
+
+svg {
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  border: 0px;
+  padding: 0px;
+  overflow: hidden;
+  /*background-color: black;*/
+}
+
+
+
 .navbar-brand{
   font-size: x-large;
 }
@@ -82,6 +99,7 @@ html,body{
 .demo-code {
   width: 100%;
   background-color: rgb(30, 30, 30);
+  max-height: 680px;
 }
 .demo-code .block-markdown__pre{
   color: rgb(156, 220, 254); 
